# BTools

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  INSTALL.txt  README.md  interactive.sh  setUp.sh
Applications/Illustration/: CMakeLists.txt  illustration.cpp
Applications/Illustration/include/: AroundBoundaryReasoning.h  AroundBoundaryReasoning.hpp  Flow.h  Flow.hpp  MockDistribution.h  OneImageFlow.h
Applications/Illustration/src/: AroundBoundaryReasoning.cpp  Flow.cpp  InputReader.cpp  OneImageFlow.cpp
Applications/dataset/: CMakeLists.txt  dataset.cpp
Applications/dataset/include/: DatasetControl.h  DatasetControl.hpp  FromSeedControl.h  InputReader.h
Applications/dataset/src/: FromSeedControl.cpp  InputReader.cpp
Applications/flow/: CMakeLists.txt  flow.cpp  makeSummaryFlow.cpp
Applications/flow/include/: ContributionSurface.h  Flow.h  Flow.hpp  FlowControl.h  FlowControl.hpp  InputReader.h  MockDistribution.h  OneImageFlow.h  PotentialGraph.h  PotentialMap.h
Applications/flow/src/: ContributionSurface.cpp  Flow.cpp  FlowControl.cpp  InputReader.cpp  OneImageFlow.cpp  PotentialMap.cpp
Applications/fromSeed/: CMakeLists.txt  fromSeed.cpp
Applications/fromSeed/include/: FromSeedControl.h  InputReader.h
Applications/fromSeed/src/: FromSeedControl.cpp  InputReader.cpp
Applications/illustration/: CMakeLists.txt  illustration.cpp
Applications/illustration/include/: AroundBoundaryReasoning.h  ContributionSurface.h  MockDistribution.h
Applications/illustration/include/ElasticaProblem/: ElasticaProblem.h
Applications/illustration/include/ElasticaProblem/model/: ElasticaInput.h  Inbox.h  Triangle.h
Applications/illustration/src/: AroundBoundaryReasoning.cpp  ContributionSurface.cpp
Applications/illustration/src/ElasticaProblem/: ElasticaProblem.cpp
Applications/illustration/src/ElasticaProblem/model/: ElasticaInput.cpp  Inbox.cpp
Applications/interactive/: CMakeLists.txt  interactive.cpp
Applications/interactive/include/: InputReader.h  InteractiveControl.h
Applications/interactive/src/: InputReader.cpp  InteractiveControl.cpp
Applications/multipleSelector/: CMakeLists.txt  multipleSelector.cpp
Applications/multipleSelector/include/: InputReader.h  MultipleSelectorControl.h
Applications/multipleSelector/src/: InputReader.cpp  MultipleSelectorControl.cpp
Test/: CMakeLists.txt  MockDistribution.h  testPerimeter.cpp  testWriting.cpp
app/boundary-correction/: CMakeLists.txt  boundary-correction.cpp
app/boundary-correction/include/: InputReader.h
app/boundary-correction/src/: InputReader.cpp
app/export-seed-mask/: CMakeLists.txt  export-seed-mask.cpp
app/grabcut/: CMakeLists.txt  GrabCut.cpp
app/grabcut/include/: GrabCutApplication.h  InputData.h
app/grabcut/src/: GrabCutApplication.cpp  InputData.cpp
app/refine-seed/: CMakeLists.txt  refine-seed.cpp
app/refine-seed/src/: GUIControl.cpp  GUIData.cpp  InputData.cpp  MaskSelector.cpp  RectSelector.cpp
app/regions-of-interest/: CMakeLists.txt  regions-of-interest.cpp
app/regions-of-interest/include/: InputReader.h
app/regions-of-interest/src/: InputReader.cpp
app/seed-selector/: CMakeLists.txt  seed-selector.cpp
app/seed-selector/include/: GUIControl.h  GUIData.h  IMouseEvent.h  InputData.h  RectSelector.h
app/seed-selector/src/: GUIControl.cpp  InputData.cpp
exp/: flows.sh  (+11 more)
jmiv-figures/fig1/: CMakeLists.txt  jmiv-fig1.cpp  jmiv-fig1.sh
jmiv-figures/fig10-11/: CMakeLists.txt  jmiv-fig10-11.sh
jmiv-figures/fig10-11/include/: InputData.h  energyUtils.h
jmiv-figures/fig2/: CMakeLists.txt  jmiv-fig2.cpp  jmiv-fig2.sh
jmiv-figures/fig2/include/: distance-transform.h  glued-curve.h
jmiv-figures/fig2/src/: distance-transform.cpp  glued-curve.cpp
jmiv-figures/fig5/: CMakeLists.txt  jmiv-fig5.cpp  jmiv-fig5.sh
jmiv-figures/fig7/: CMakeLists.txt  jmiv-fig7.cpp  jmiv-fig7.sh
jmiv-figures/fig8-9/: CMakeLists.txt  jmiv-fig8.sh
jmiv-figures/fig8-9/include/: InputData.h  MockDistribution.h  energyUtils.h
jmiv-figures/fig8-9/src/: countUnlabeled.cpp  energyUtils.cpp
jmiv-figures/figR1/: CMakeLists.txt
modules/Applications/export-seed-mask/: CMakeLists.txt  export-seed-mask.cpp
modules/Applications/grabcut/: CMakeLists.txt  GrabCut.cpp
modules/Applications/grabcut/include/: GrabCutApplication.h  GrabCutOutput.h  InputData.h
modules/Applications/grabcut/output/: cow2.xml
modules/Applications/intersection-flow/: CMakeLists.txt  intersection-flow.cpp
modules/Applications/intersection-flow/include/: Types.h
modules/api/: CMakeLists.txt
modules/api/include/BTools/api/: api.h
modules/api/src/: api.cpp
modules/core/: CMakeLists.txt
modules/core/include/BTools/core/: BCApplication.h  BCApplication.hpp
modules/core/include/BTools/core/control/: BCControl.h  BCControl.hpp  modelIteration.h
modules/core/include/BTools/core/interface/: IBCControlVisitor.h  IFlowProfile.h  IFlowStepConfig.h
modules/core/include/BTools/core/model/: BCAOutput.h  BCOutput.h  CVMatDistribution.h  GMM.h  ShapeType.h
modules/core/include/BTools/core/pool/: FlowPool.h  ODRPool.h
modules/core/include/BinOCS/core/: BCApplication.h  BCApplication.hpp
modules/core/src/: BCApplication.cpp
modules/core/src/control/: BCControl.cpp  modelIteration.cpp
modules/core/src/model/: GMM.cpp  SolutionHint.cpp
modules/core/src/pool/: FlowPool.cpp  ODRPool.cpp
modules/reader/: CMakeLists.txt
modules/reader/include/BTools/reader/: DCFReader.h  InputData.h  Types.h
modules/reader/src/: DCFReader.cpp
modules/utils/: CMakeLists.txt
modules/utils/include/BTools/utils/: DataWriter.h  digUtils.h  dispUtils.h  imgUtils.h  strUtils.h  timer.h
modules/utils/include/BinOCS/utils/: DataWriter.h  dispUtils.h  imgUtils.h  strUtils.h
modules/utils/src/: DataWriter.cpp  GrabCutIO.cpp  digUtils.cpp  dispUtils.cpp  imgUtils.cpp  strUtils.cpp  timer.cpp
modules/visitors/: CMakeLists.txt
modules/visitors/include/: PotentialGraph.h  PotentialMap.h
modules/visitors/include/BTools/visitors/: PotentialMap.h
modules/visitors/src/: PotentialGraph.cpp  PotentialMap.cpp
(+827 files in other folders)
